--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "indev/adcconsole",
+    "name": "indev/adconsole",
     "description": "Console for Adianti Framework Community Edition",
     "type": "library",
     "license": "MIT",
